# clickup-cli

./: .clickup-cli.yaml.example  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/clickup_cli/: __init__.py  cli.py  client.py  config.py
