[project]
name = "clickup-cli"
version = "0.1.0"
description = "Tiny Python CLI for ClickUp API"
authors = [
    { name = "Luis Juarez", email = "lajuarezs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
clickup-cli = "clickup_cli.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
